--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>React App</title>
+  </head>
+  <body>
+    <!-- React 애플리케이션이 렌더링될 루트 요소 -->
+    <div id="root"></div>
     
-</body>
+    <!-- 빌드된 React 스크립트가 여기에 주입됩니다 -->
+  </body>
 </html>
